{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 11,
  "lineage": "b419d1e2-6122-546c-d948-823b6919d152",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hdp_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0cd87514ab57e20ac",
            "owner_id": "745233638935",
            "tags": {
              "Name": "hdp_igw"
            },
            "vpc_id": "vpc-046e21139cbc04668"
          },
          "depends_on": [
            "aws_vpc.hdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "hdp_public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cd87514ab57e20ac",
            "id": "r-rtb-073ee1ae355ac6fba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-073ee1ae355ac6fba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.hdp_internet_gateway",
            "aws_route_table.hdp_public_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hdp_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-073ee1ae355ac6fba",
            "owner_id": "745233638935",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hdp_public_rt"
            },
            "vpc_id": "vpc-046e21139cbc04668"
          },
          "depends_on": [
            "aws_vpc.hdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hdp_public_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0826778413e4d2805",
            "route_table_id": "rtb-073ee1ae355ac6fba",
            "subnet_id": "subnet-09e0b0d466f18d763"
          },
          "depends_on": [
            "aws_route_table.hdp_public_rt",
            "aws_subnet.hdp_public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff5e26bbad5a9bcd",
            "route_table_id": "rtb-073ee1ae355ac6fba",
            "subnet_id": "subnet-070e37db2760d3d70"
          },
          "depends_on": [
            "aws_route_table.hdp_public_rt",
            "aws_subnet.hdp_public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f94451ee2d60db8",
            "route_table_id": "rtb-073ee1ae355ac6fba",
            "subnet_id": "subnet-045cc5622d960ad4e"
          },
          "depends_on": [
            "aws_route_table.hdp_public_rt",
            "aws_subnet.hdp_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hdp_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745233638935:subnet/subnet-09e0b0d466f18d763",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/27",
            "id": "subnet-09e0b0d466f18d763",
            "map_public_ip_on_launch": true,
            "owner_id": "745233638935",
            "tags": {
              "Name": "hdp_public"
            },
            "vpc_id": "vpc-046e21139cbc04668"
          },
          "depends_on": [
            "aws_vpc.hdp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745233638935:subnet/subnet-070e37db2760d3d70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.32/27",
            "id": "subnet-070e37db2760d3d70",
            "map_public_ip_on_launch": true,
            "owner_id": "745233638935",
            "tags": {
              "Name": "hdp_public"
            },
            "vpc_id": "vpc-046e21139cbc04668"
          },
          "depends_on": [
            "aws_vpc.hdp_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745233638935:subnet/subnet-045cc5622d960ad4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.64/27",
            "id": "subnet-045cc5622d960ad4e",
            "map_public_ip_on_launch": true,
            "owner_id": "745233638935",
            "tags": {
              "Name": "hdp_public"
            },
            "vpc_id": "vpc-046e21139cbc04668"
          },
          "depends_on": [
            "aws_vpc.hdp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hdp_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745233638935:vpc/vpc-046e21139cbc04668",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.1.0/24",
            "default_network_acl_id": "acl-075f39ce1183e0ad7",
            "default_route_table_id": "rtb-09ec1f6fd708157f2",
            "default_security_group_id": "sg-095601c2be6fd0568",
            "dhcp_options_id": "dopt-3f0a3d44",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-046e21139cbc04668",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09ec1f6fd708157f2",
            "owner_id": "745233638935",
            "tags": {
              "Name": "hdp_vpc"
            }
          }
        }
      ]
    }
  ]
}